2005-09-08  Marcus Brinkmann  <marcus@g10code.com>

	* assuan-pipe-connect.c (assuan_pipe_connect2): Add missing
	declaration of PID.

2005-08-09  Werner Koch  <wk@g10code.com>

	* mkerrors: Include config.h into assuan-errors.c.  This is
	required so that assuan.h knows about the W32 macro.

	* assuan.h [_ASSUAN_EXT_SYM_PREFIX]: New.
	* assuan-io.c [_ASSUAN_NO_PTH]: New.
	* assuan-pipe-connect.c (fix_signals) [_ASSUAN_NO_FIXED_SIGNALS]: New.
	(assuan_pipe_connect2) [_ASSUAN_USE_DOUBLE_FORK]: Use double fork.
	(fix_signals) [_ASSUAN_USE_DOUBLE_FORK]: Do not wait..
	
2005-05-21  Werner Koch  <wk@g10code.com>

	* assuan-util.c (assuan_set_flag, assuan_get_flag): New.
	* assuan-defs.h (struct assuan_context_s): New field flags.
	* assuan.h (assuan_flag_t): New with one flag value
	ASSUAN_NO_WAITPID for now.
	* assuan-pipe-connect.c (do_finish): Take care of the no_waitpid
	flag.

2005-04-04  Werner Koch  <wk@g10code.com>

	* assuan-util.c (_assuan_calloc): Avoid integer overflow.

2005-03-22  Werner Koch  <wk@g10code.com>

	* assuan-defs.h (struct assuan_io): Renamed elements READ and
	WRITE to READFNC and WRITEFNC to avoid problems with read defined
	as macros.  Changed callers.  Noted by Ville Skyttä.

2005-02-24  Werner Koch  <wk@g10code.com>

	* assuan-client.c (assuan_transact): Handle empty and comment
	commands correctly.

2004-12-20  Werner Koch  <wk@g10code.com>

	* assuan-socket-connect.c (assuan_socket_connect) [W32]: Allow for
	a drive letter in the path.

2004-12-19  Werner Koch  <wk@g10code.com>

	* assuan-pipe-server.c (assuan_init_pipe_server) [W32]: Map file
	descriptors using _get_osfhandle.

2004-12-19  Moritz Schulte  <moritz@g10code.com>

	* assuan-pipe-connect.c (assuan_pipe_connect2): Removed "`"
	character at beginning of line 532.

2004-12-18  Werner Koch  <wk@g10code.com>

	* assuan-logging.c (_assuan_w32_strerror): New. 
	* assuan-defs.h (w32_strerror): new.
	* assuan-pipe-connect.c (assuan_pipe_connect2, fix_signals):