@@ -202,7 +202,7 @@ _assuan_log_print_buffer (FILE *fp, const void *buffer, size_t length)
 void
 _assuan_log_sanitized_string (const char *string)
 {
-  const unsigned char *s = string;
+  const unsigned char *s = (const unsigned char *) string;
   FILE *fp = assuan_get_assuan_log_stream ();
 
   if (! *s)
